footer menu alignment issue chekcbox color changed

--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -51,10 +51,36 @@
   font-size: 12px !important;
 }
 
-::ng-deep .custom-checkbox {
-  background-color: #BE7B2E !important;
-  border-color: #BE7B2E !important;
+input[type=checkbox]{
+  accent-color:#BE7B2E;
 }
+
+// ::ng-deep .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+//   background-color: green!important;
+// }
+
+// ::ng-deep .custom-checkbox .custom-control-input:checked:focus ~ .custom-control-label::before {
+//   box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 255, 0, 0.25)
+// }
+// ::ng-deep .custom-checkbox .custom-control-input:focus ~ .custom-control-label::before {
+//   box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 0, 0, 0.25)
+// }
+// ::ng-deep .custom-checkbox .custom-control-input:active ~ .custom-control-label::before {
+//   background-color: #C8FFC8; 
+// }
+
+// ::ng-deep .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+//   background-color: #BE7B2E;
+//   border-color: #BE7B2E;
+// }
+// ::ng-deep .custom-checkbox .custom-control-input:focus ~ .custom-control-label::before {
+//   box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
+// }
+
+// ::ng-deep .custom-checkbox {
+//   background-color: #BE7B2E !important;
+//   border-color: #BE7B2E !important;
+// }
 
 ::ng-deep .custom-checkbox:checked {
   background-color: #BE7B2E !important;
@@ -119,3 +145,4 @@ color:#fff;
 /**=====================
     25. Authentication CSS Ends
 ==========================**/
+
